--- a/resources/fieldsets/header_visual.yaml
+++ b/resources/fieldsets/header_visual.yaml
@@ -1,11 +1,9 @@
 title: Headerbild
 fields:
   -
-    handle: image
+    handle: header_image
     field:
       container: assets
       type: assets
       display: Bild
-      validate:
-        - required
       max_files: 1
