--- a/resources/fieldsets/benefits.yaml
+++ b/resources/fieldsets/benefits.yaml
@@ -5,6 +5,7 @@ fields:
     field:
       type: replicator
       display: Benefit
+      collapse: true
       sets:
         benefit:
           display: Benefit
