--- a/resources/fieldsets/button.yaml
+++ b/resources/fieldsets/button.yaml
@@ -4,7 +4,7 @@ fields:
     handle: button_text
     field:
       type: text
-      display: Text
+      display: 'Button Text'
       instructions: 'Angezeigter Text'
       validate:
         - required
@@ -12,7 +12,7 @@ fields:
     handle: button_link
     field:
       type: link
-      display: Link
+      display: 'Button Link'
       instructions: 'Link für Button'
       validate:
         - required
