--- a/resources/blueprints/collections/pages/page.yaml
+++ b/resources/blueprints/collections/pages/page.yaml
@@ -66,6 +66,13 @@ tabs:
                       fields:
                         -
                           import: job_listing
+                    services:
+                      display: Angebote
+                      instructions: 'Angebote hinzufügen'
+                      icon: text-formatting-image-top
+                      fields:
+                        -
+                          import: services
                     benefits:
                       display: Benefits
                       instructions: 'Liste der Benefits'
