--- a/resources/blueprints/collections/requests_nursery/requests_nursery.yaml
+++ b/resources/blueprints/collections/requests_nursery/requests_nursery.yaml
@@ -110,4 +110,4 @@ tabs:
               type: slug
               localizable: true
               validate: 'max:200'
-title: 'Anmeldungen (Chinderhuus)'
+title: 'Anmeldungen Chinderhuus'
