--- a/resources/blueprints/collections/requests_events/requests_event.yaml
+++ b/resources/blueprints/collections/requests_events/requests_event.yaml
@@ -12,15 +12,16 @@ tabs:
               validate:
                 - required
           -
-            handle: service
+            handle: event_title
             field:
               type: text
-              display: Service
+              display: Event
           -
-            handle: shares
+            handle: event_id
             field:
               type: text
-              display: 'Anzahl Anteile'
+              display: 'Event ID'
+              visibility: hidden
           -
             handle: name
             field:
@@ -32,26 +33,11 @@ tabs:
               type: text
               display: Vorname
           -
-            handle: date_of_birth
-            field:
-              type: date
-              display: Geburtsdatum
-          -
             handle: email
             field:
               input_type: email
               type: text
               display: E-Mail
-          -
-            handle: phone
-            field:
-              type: text
-              display: Telefon
-          -
-            handle: message
-            field:
-              type: textarea
-              display: Nachricht
   sidebar:
     display: Sidebar
     sections:
@@ -63,4 +49,4 @@ tabs:
               type: slug
               localizable: true
               validate: 'max:200'
-title: 'Formular Genossenschaft'
+title: 'Formular (Events)'
