--- a/resources/blueprints/collections/requests_general/requests_general.yaml
+++ b/resources/blueprints/collections/requests_general/requests_general.yaml
@@ -53,4 +53,4 @@ tabs:
               type: slug
               localizable: true
               validate: 'max:200'
-title: 'Anfragen (Generell)'
+title: 'Formular Generell'
