--- a/resources/blueprints/collections/requests_rooms/requests_room.yaml
+++ b/resources/blueprints/collections/requests_rooms/requests_room.yaml
@@ -64,4 +64,4 @@ tabs:
               type: slug
               localizable: true
               validate: 'max:200'
-title: 'Anfragen (Räume)'
+title: 'Formular Räume'
