--- a/resources/fieldsets/editor.yaml
+++ b/resources/fieldsets/editor.yaml
@@ -7,7 +7,7 @@ fields:
         - h1
         - h2
         - h3
-        - italic
+        - bold
         - unorderedlist
         - removeformat
         - anchor
