--- a/resources/fieldsets/accordion.yaml
+++ b/resources/fieldsets/accordion.yaml
@@ -18,11 +18,14 @@ fields:
     handle: text_left
     field:
       buttons:
+        - h1
+        - h2
         - h3
         - bold
         - unorderedlist
         - removeformat
         - anchor
+        - nobr
       remove_empty_nodes: false
       type: bard
       display: 'Text (links)'
@@ -44,11 +47,14 @@ fields:
     handle: text_right
     field:
       buttons:
+        - h1
+        - h2
         - h3
         - bold
         - unorderedlist
         - removeformat
         - anchor
+        - nobr
       toolbar_mode: floating
       remove_empty_nodes: true
       type: bard
